5 September 2016: Ralph
	- Take configured minimum TTL into consideration when reducing TTL
	  to original TTL from RRSIG.

5 September 2016: Wouter
	- Fix #829: doc of sldns_wire2str_rdata_buf() return value has an
	  off-by-one typo, from Jinmei Tatuya (Infoblox).
	- Fix incomplete prototypes reported by Dag-Erling Smørgrav.
	- Fix #828: missing type in access-control-tag-action redirect results
	  in NXDOMAIN.

2 September 2016: Wouter
	- Fix compile with openssl 1.1.0 with api=1.1.0.

1 September 2016: Wouter
	- RFC 7958 is now out, updated docs for unbound-anchor.
	- Fix for compile without warnings with openssl 1.1.0.
	- Fix #826: Fix refuse_non_local could result in a broken response.
	- iana portlist update.

29 August 2016: Wouter
	- Fix #777: OpenSSL 1.1.0 compatibility, patch from Sebastian A.
	  Siewior.
	- Add default root hints for IPv6 E.ROOT-SERVERS.NET, 2001:500:a8::e.

25 August 2016: Ralph
	- Clarify local-zone-override entry in unbound.conf.5 
	
25 August 2016: Wouter
	- 64bit build option for makedist windows compile, -w64.

24 August 2016: Ralph
	- Fix #820: set sldns_str2wire_rr_buf() dual meaning len parameter
	  in each iteration in find_tag_datas().
	- unbound.conf.5 entries for define-tag, access-control-tag,
	  access-control-tag-action, access-control-tag-data, local-zone-tag,
	  and local-zone-override.
	  
23 August 2016: Wouter
	- Fix #804: unbound stops responding after outage.  Fixes queries
	  that attempt to wait for an empty list of subqueries.
	- Fix #804: lower num_target_queries for iterator also for failed
	  lookups.

8 August 2016: Wouter
	- Note that OPENPGPKEY type is RFC 7929.

4 August 2016: Wouter
	- Fix #807: workaround for possible some "unused" function parameters
	  in test code, from Jinmei Tatuya.

3 August 2016: Wouter
	- use sendmsg instead of sendto for TFO.

28 July 2016: Wouter
	- Fix #806: wrong comment removed.

26 July 2016: Wouter
	- nicer ratelimit-below-domain explanation.

22 July 2016: Wouter